tests/transpiler/x/scala/short_circuit.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/short_circuit.scala:3: error: ':' expected but ',' found.
    def boom(a, b) = {
              ^
/workspace/mochi/tests/transpiler/x/scala/short_circuit.scala:11: error: identifier expected but '}' found.
}
^
two errors found
