tests/transpiler/x/scala/short_circuit.scala
// Generated by Mochi v0.10.31 on 2025-07-20 02:18:01 GMT+7
object Main extends App {
  def boom(a, b) = {
    println("boom")
    true
  }

  println((false && boom(1, 2)))
  println((true || boom(1, 2)))
}
